text align issue

--- a/src/Containers/Photography/Photography.module.css
+++ b/src/Containers/Photography/Photography.module.css
@@ -1,3 +1,7 @@
+.galleryContainer{
+  text-align: center;
+}
+  
   .gridContainer {
     display:grid;
     margin:auto;
